<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total de Quilômetros</string>
    <string name="price">Preço</string>
    <string name="autonomy">Autonomia</string>
    <string name="price_per_litro">Preço por Litro</string>
    <string name="kms_per_litro">Kms por Litro</string>
    <string name="total_spend">Seu gasto total será de:</string>
    <string name="total_value">rs 0</string>
    <string name="calculate">calcular</string>
    <string name="validation">Preencha todos os campos.</string>

</resources>